--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         }
 
         /* RECTO */
-        .card__face--front { background-image: url('https://i.ibb.co/jk7ZCjMV/unnamed.jpg'); }
+        .card__face--front { background-image: url('https://i.ibb.co/FbwcfTyJ/unnamed2.jpg'); }
 
         /* VERSO */
         .card__face--back {
@@ -290,4 +290,5 @@
         window.addEventListener('touchend', stopDrag);
     </script>
 </body>
+
 </html>
